# QtAppUpdate

./: CMakeLists.txt  README.md
src/: Downloader.cpp  Downloader.h  QSimpleUpdater.cpp  QSimpleUpdater.h  Window.cpp  Window.h  Window.ui  main.cpp
www/: updates.json
